clusters/istio-configs/bookinfo/gateway.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: cluster-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.istio.m1xxos.online"
